--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,10 +38,7 @@
 }
 
 .slider-control--left {
-  -webkit-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
+  -webkit-transform: translate(-50%, -50%) scale(-1, 1);
+  -ms-transform: translate(-50%, -50%) scale(-1, 1);
+  transform: translate(-50%, -50%) scale(-1, 1);
 }
