--- a/app/css/style.css
+++ b/app/css/style.css
@@ -42,3 +42,50 @@
   -ms-transform: translate(-50%, -50%) scale(-1, 1);
   transform: translate(-50%, -50%) scale(-1, 1);
 }
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.scroll-menu {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.scroll-link {
+  display: inline-block;
+  margin: 0 2rem;
+  font-size: 18px;
+  color: #2E2C2F;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: -webkit-box-shadow, -webkit-transform;
+  transition-property: -webkit-box-shadow, -webkit-transform;
+  -o-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform, -webkit-box-shadow, -webkit-transform;
+}
+
+.scroll-link:hover {
+  -webkit-box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.scroll-section {
+  display: block;
+  margin-top: 1rem;
+  padding-top: 20rem;
+  width: 100%;
+  height: 50rem;
+  text-align: center;
+  font-size: 3rem;
+  color: #2E2C2F;
+  background-color: #BACDB0;
+  border-style: outset;
+}
