--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,6 +43,10 @@
   transform: translate(-50%, -50%) scale(-1, 1);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   color: inherit;
   text-decoration: inherit;
@@ -59,6 +63,7 @@ a {
   margin: 0 2rem;
   font-size: 18px;
   color: #2E2C2F;
+  cursor: pointer;
   -webkit-transition-duration: 0.3s;
   -o-transition-duration: 0.3s;
   transition-duration: 0.3s;
@@ -88,4 +93,17 @@ a {
   color: #2E2C2F;
   background-color: #BACDB0;
   border-style: outset;
+}
+
+.scroll-up-btn {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  display: block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
