--- a/src/sass/_scroll.scss
+++ b/src/sass/_scroll.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   color: inherit;
   text-decoration: inherit;
@@ -14,6 +18,7 @@ a {
   margin: 0 2rem;
   font-size: 18px;
   color: $charleston-green-color;
+  cursor: pointer;
   transition-duration: 0.3s;
   transition-property: box-shadow, transform;
 
@@ -34,4 +39,15 @@ a {
   color: $charleston-green-color;
   background-color: $ash-gray-color;
   border-style: outset;
+}
+
+.scroll-up-btn {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  display: block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transform: rotate(90deg);
 }
