--- a/app/css/style.css
+++ b/app/css/style.css
@@ -195,3 +195,93 @@ a {
 .hidden {
   right: 100vw;
 }
+
+.modal {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  margin: 5rem 25rem 0 0;
+  padding: 2rem;
+  width: 41.5rem;
+  opacity: unset;
+  font-size: 1.5rem;
+  background-color: white;
+  border: 3px solid black;
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transform: scale(1, 1);
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+
+.modal--hidden {
+  -webkit-transform: scale(0, 0);
+  -ms-transform: scale(0, 0);
+  transform: scale(0, 0);
+  opacity: 0;
+}
+
+.modal-overlay {
+  width: 100%;
+  height: 100rem;
+  background-color: rgba(20, 20, 20, 0.5);
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+
+.modal-overlay--hidden {
+  background-color: transparent;
+}
+
+.modal-close {
+  display: block;
+  margin: 0;
+  padding: 1rem;
+  text-align: right;
+  font-size: 1rem;
+  color: black;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.modal-close:hover {
+  font-weight: bold;
+}
+
+.menu-toggle {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  margin: 5rem 20rem 0 0;
+  cursor: pointer;
+}
+
+.menu-toggle-line1, .menu-toggle-line2, .menu-toggle-line3 {
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.change .menu-toggle-line1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  -ms-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .menu-toggle-line2 {
+  opacity: 0;
+}
+
+.change .menu-toggle-line3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  -ms-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
