--- a/src/css/style.css
+++ b/src/css/style.css
@@ -196,7 +196,11 @@ a {
   right: 100vw;
 }
 
-.modal {
+body {
+  position: relative;
+}
+
+.modal-window {
   position: absolute;
   display: block;
   top: 0;
@@ -216,7 +220,7 @@ a {
   transition: all 1s;
 }
 
-.modal--hidden {
+.modal-window--hidden {
   -webkit-transform: scale(0, 0);
   -ms-transform: scale(0, 0);
   transform: scale(0, 0);
@@ -224,9 +228,13 @@ a {
 }
 
 .modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100rem;
-  background-color: rgba(20, 20, 20, 0.5);
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
   -webkit-transition: all 1s;
   -o-transition: all 1s;
   transition: all 1s;
@@ -234,6 +242,7 @@ a {
 
 .modal-overlay--hidden {
   background-color: transparent;
+  visibility: hidden;
 }
 
 .modal-close {
