--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,4 +1,8 @@
-.modal {
+body {
+  position: relative;
+}
+
+.modal-window {
   position: absolute;
   display: block;
   top: 0;
@@ -20,13 +24,18 @@
 }
 
 .modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100rem;
-  background-color: rgba(20, 20, 20, .5);
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
   transition: all 1s;
 
   &--hidden {
     background-color: transparent;
+    visibility: hidden;
   }
 }
 
