--- a/src/sass/_olympic.scss
+++ b/src/sass/_olympic.scss
@@ -4,6 +4,16 @@
   }
 }
 
-.js-filter-hidden, .js-pagination-hidden {
+.js-filter-hidden, .js-pagination-hidden, .js-pagination-grouped {
   display: none;
+}
+
+.js-pagination-dots-before:before {
+  content: "...";
+  padding-right: 20px;
+}
+
+.js-pagination-dots-after:after {
+  content: "...";
+  padding-left: 20px;
 }
